fixed: add word-wrap in messages

--- a/app/src/components/Dialogs/Message/Message.css
+++ b/app/src/components/Dialogs/Message/Message.css
@@ -25,4 +25,6 @@
   vertical-align: middle;
   margin-right: 10px;
   margin-left: 10px;
+  max-width: 70%;
+  word-wrap: break-word;
 }
